esquema basico y formateo de estilos css

--- a/index.html
+++ b/index.html
@@ -7,6 +7,21 @@
     <link rel="stylesheet" href="./index.css">
 </head>
 <body>
-    <h1>Esto es un prueba</h1>
+    <nav>
+        <div class="logo">Logo</div>
+        <ul>
+            <li>Equipo</li>
+            <li>Servicios</li>
+            <li>Contacto</li>
+        </ul>
+    </nav>
+    <div class="container">
+        <section id="equipo">Sección 1</section>
+        <section id="servicios">Sección 2</section>
+        <section id="contactos">Sección 3</section>
+    </div>
+    <footer id="footer">
+        Footer
+    </footer>
 </body>
 </html>
