--- a/index.html
+++ b/index.html
@@ -1,27 +1,107 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DigitacionesAR</title>
-    <link rel="stylesheet" href="./index.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./index.css" />
+  </head>
+  <body>
     <nav>
-        <div class="logo">Logo</div>
-        <ul>
-            <li>Equipo</li>
-            <li>Servicios</li>
-            <li>Contacto</li>
-        </ul>
+      <!-- <div class="logo">Logo</div> -->
+      <ul>
+        <li><a href="">Equipo</a></li>
+        <li><a href="">Servicios</a></li>
+        <li><a href="">Contacto</a></li>
+      </ul>
     </nav>
     <div class="container">
-        <section id="equipo">Sección 1</section>
-        <section id="servicios">Sección 2</section>
-        <section id="contactos">Sección 3</section>
-    </div>
-    <footer id="footer">
+      <div id="portada">
+        <h1>Servicios de Digitación</h1>
+        <p>Servicios administrativos a tu medida</p>
+      </div>
+      <!-- EQUIPO -->
+      <section id="equipo">
+        <article>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque
+            assumenda corrupti vero, dignissimos labore facilis quae possimus,
+            libero quibusdam voluptas quos, explicabo culpa quis! Ipsa molestiae
+            error minima earum nihil.
+          </p>
+        </article>
+      </section>
+      <!-- SERVICIOS -->
+      <section id="servicios">
+        <h2>Servicios</h2>
+        <div class="services-grid">
+          <!-- SERVICIO 1 -->
+          <div class="servicio">
+            <i class="far fa-keyboard"></i>
+            <h5>Digitacion</h5>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum
+              explicabo vero, architecto facere in omnis quod sequi laboriosam
+              alias reiciendis. Reiciendis error iure molestiae earum amet
+              recusandae atque, pariatur perferendis.
+            </p>
+          </div>
+          <!-- SERVICIO 2 -->
+          <div class="servicio">
+            <i class="far fa-keyboard"></i>
+            <h5>Digitacion</h5>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum
+              explicabo vero, architecto facere in omnis quod sequi laboriosam
+              alias reiciendis. Reiciendis error iure molestiae earum amet
+              recusandae atque, pariatur perferendis.
+            </p>
+          </div>
+          <!-- SERVICIO 3 -->
+          <div class="servicio">
+            <i class="far fa-keyboard"></i>
+            <h5>Digitacion</h5>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum
+              explicabo vero, architecto facere in omnis quod sequi laboriosam
+              alias reiciendis. Reiciendis error iure molestiae earum amet
+              recusandae atque, pariatur perferendis.
+            </p>
+          </div>
+          <!-- SERVICIO 4 -->
+          <div class="servicio">
+            <i class="far fa-keyboard"></i>
+            <h5>Digitacion</h5>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum
+              explicabo vero, architecto facere in omnis quod sequi laboriosam
+              alias reiciendis. Reiciendis error iure molestiae earum amet
+              recusandae atque, pariatur perferendis.
+            </p>
+          </div>
+          <!-- SERVICIO 5 -->
+          <div class="servicio">
+            <i class="far fa-keyboard"></i>
+            <h5>Digitacion</h5>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum
+              explicabo vero, architecto facere in omnis quod sequi laboriosam
+              alias reiciendis. Reiciendis error iure molestiae earum amet
+              recusandae atque, pariatur perferendis.
+            </p>
+          </div>
+        </div>
+      </section>
+      <!-- CONTACTOS -->
+      <section id="contactos">Sección 3</section>
+      <!-- FOOTER -->
+      <footer id="footer">
         Footer
-    </footer>
-</body>
+      </footer>
+    </div>
+    <script
+      src="https://kit.fontawesome.com/74e2b55770.js"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
