--- a/index.html
+++ b/index.html
@@ -93,10 +93,16 @@
         </div>
       </section>
       <!-- CONTACTOS -->
-      <section id="contactos">Sección 3</section>
+      <section id="contactos">
+        <ul>
+          <li><i class="fab fa-whatsapp"></i>+56 9 2063 0111</li>
+          <li><a href="https://www.instagram.com/digitacionesar/" target="_blank"><i class="fab fa-instagram"></i>Instagram</a></li>
+          <li><a href="mailto:digitacionesar@gmail.com"><i class="far fa-envelope"></i>digitacionesar@gmail.com</a></li>
+        </ul>
+      </section>
       <!-- FOOTER -->
       <footer id="footer">
-        Footer
+        <p>&copy; Todos los derechos reservados - DigitacionesAR - Servicios de Digitación</p>
       </footer>
     </div>
     <script
