--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
     <nav>
       <!-- <div class="logo">Logo</div> -->
       <ul>
-        <li><a href="">Equipo</a></li>
-        <li><a href="">Servicios</a></li>
-        <li><a href="">Contacto</a></li>
+        <li><a href="#servicios">Servicios</a></li>
+        <li><a href="#contactos">Contactos</a></li>
       </ul>
     </nav>
     <div class="container">
@@ -48,8 +47,8 @@
           </div>
           <!-- SERVICIO 2 -->
           <div class="servicio">
-            <i class="far fa-keyboard"></i>
-            <h5>Digitacion</h5>
+            <i class="fas fa-microphone"></i>
+            <h5>Trancripción</h5>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum
               explicabo vero, architecto facere in omnis quod sequi laboriosam
@@ -59,8 +58,8 @@
           </div>
           <!-- SERVICIO 3 -->
           <div class="servicio">
-            <i class="far fa-keyboard"></i>
-            <h5>Digitacion</h5>
+            <i class="fas fa-file-csv"></i>
+            <h5>Data Entry</h5>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum
               explicabo vero, architecto facere in omnis quod sequi laboriosam
@@ -70,8 +69,8 @@
           </div>
           <!-- SERVICIO 4 -->
           <div class="servicio">
-            <i class="far fa-keyboard"></i>
-            <h5>Digitacion</h5>
+            <i class="far fa-file-code"></i>
+            <h5>Web Scrapping</h5>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum
               explicabo vero, architecto facere in omnis quod sequi laboriosam
@@ -81,8 +80,8 @@
           </div>
           <!-- SERVICIO 5 -->
           <div class="servicio">
-            <i class="far fa-keyboard"></i>
-            <h5>Digitacion</h5>
+            <i class="fas fa-users"></i>
+            <h5>Administrative Outservices</h5>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum
               explicabo vero, architecto facere in omnis quod sequi laboriosam
@@ -96,13 +95,24 @@
       <section id="contactos">
         <ul>
           <li><i class="fab fa-whatsapp"></i>+56 9 2063 0111</li>
-          <li><a href="https://www.instagram.com/digitacionesar/" target="_blank"><i class="fab fa-instagram"></i>Instagram</a></li>
-          <li><a href="mailto:digitacionesar@gmail.com"><i class="far fa-envelope"></i>digitacionesar@gmail.com</a></li>
+          <li>
+            <a href="https://www.instagram.com/digitacionesar/" target="_blank"
+              ><i class="fab fa-instagram"></i>Instagram</a
+            >
+          </li>
+          <li>
+            <a href="mailto:digitacionesar@gmail.com"
+              ><i class="far fa-envelope"></i>digitacionesar@gmail.com</a
+            >
+          </li>
         </ul>
       </section>
       <!-- FOOTER -->
       <footer id="footer">
-        <p>&copy; Todos los derechos reservados - DigitacionesAR - Servicios de Digitación</p>
+        <p>
+          &copy; Todos los derechos reservados - DigitacionesAR - Servicios de
+          Digitación
+        </p>
       </footer>
     </div>
     <script
