correcciones de responsabilidad y legibilidad de fuente

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <!-- SERVICIO 1 -->
           <div class="servicio">
             <i class="far fa-keyboard"></i>
-            <h5>Digitacion</h5>
+            <h5>Digitación</h5>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum
               explicabo vero, architecto facere in omnis quod sequi laboriosam
@@ -97,7 +97,7 @@
           <li><i class="fab fa-whatsapp"></i>+56 9 2063 0111</li>
           <li>
             <a href="https://www.instagram.com/digitacionesar/" target="_blank"
-              ><i class="fab fa-instagram"></i>Instagram</a
+              ><i class="fab fa-instagram"></i>DigitacionesAR</a
             >
           </li>
           <li>
