correccion ortografica y aumento en opacidad de fuente

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <!-- SERVICIO 2 -->
           <div class="servicio">
             <i class="fas fa-microphone"></i>
-            <h5>Trancripción</h5>
+            <h5>Transcripción</h5>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum
               explicabo vero, architecto facere in omnis quod sequi laboriosam
