--- a/index.html
+++ b/index.html
@@ -23,10 +23,7 @@
       <section id="equipo">
         <article>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque
-            assumenda corrupti vero, dignissimos labore facilis quae possimus,
-            libero quibusdam voluptas quos, explicabo culpa quis! Ipsa molestiae
-            error minima earum nihil.
+            esto es una prueba
           </p>
         </article>
       </section>
