ingreso de descripcion de servicios

--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
       <section id="equipo">
         <article>
           <p>
-            esto es una prueba
+            Somos un pequeño grupo de profesionales que busca satisfacer la
+            necesidad de servicios de digitación a particulares o pymes.
+            Buscamos prestar un servicio de calidad al desarrollar procesos
+            administrativos que puedan satisfacer las necesidades del cliente.
           </p>
         </article>
       </section>
@@ -36,10 +39,10 @@
             <i class="far fa-keyboard"></i>
             <h5>Digitación</h5>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum
-              explicabo vero, architecto facere in omnis quod sequi laboriosam
-              alias reiciendis. Reiciendis error iure molestiae earum amet
-              recusandae atque, pariatur perferendis.
+              Transcripción de datos a formato word o txt. Se realiza la
+              recuperación de datos tipo texto de imágenes o documentos pdf
+              escaneados o fotografiados, con el objetivo de entregar un
+              documento editable.
             </p>
           </div>
           <!-- SERVICIO 2 -->
@@ -47,10 +50,9 @@
             <i class="fas fa-microphone"></i>
             <h5>Transcripción</h5>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum
-              explicabo vero, architecto facere in omnis quod sequi laboriosam
-              alias reiciendis. Reiciendis error iure molestiae earum amet
-              recusandae atque, pariatur perferendis.
+              Tipeo de audios en idioma español a un documento de texto
+              editable. Los datos son ingresados sin formato específico,
+              respetando reglas gramaticales y ortográficas básicas.
             </p>
           </div>
           <!-- SERVICIO 3 -->
@@ -58,10 +60,10 @@
             <i class="fas fa-file-csv"></i>
             <h5>Data Entry</h5>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum
-              explicabo vero, architecto facere in omnis quod sequi laboriosam
-              alias reiciendis. Reiciendis error iure molestiae earum amet
-              recusandae atque, pariatur perferendis.
+              Captura de datos en planilla de excel. Generalmente ingreso de
+              datos números según especificaciones del cliente. Asociado a
+              trabajo de indexación de data para bases de datos y/o trabajos
+              contables básicos.
             </p>
           </div>
           <!-- SERVICIO 4 -->
@@ -69,10 +71,9 @@
             <i class="far fa-file-code"></i>
             <h5>Web Scrapping</h5>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum
-              explicabo vero, architecto facere in omnis quod sequi laboriosam
-              alias reiciendis. Reiciendis error iure molestiae earum amet
-              recusandae atque, pariatur perferendis.
+              Extracción de datos de sitios web para bases de datos. Ingreso de
+              datos en planilla excel con la captura realizados de valores
+              numérico o cadenas de texto según especificaciones del clientes.
             </p>
           </div>
           <!-- SERVICIO 5 -->
@@ -80,10 +81,9 @@
             <i class="fas fa-users"></i>
             <h5>Administrative Outservices</h5>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum
-              explicabo vero, architecto facere in omnis quod sequi laboriosam
-              alias reiciendis. Reiciendis error iure molestiae earum amet
-              recusandae atque, pariatur perferendis.
+              Trabajo administrativos teleoperados. Realización de tareas
+              rutinarios de ingreso de datos a plataformas internas del cliente
+              respetando los protocolos e indicaciones dadas.
             </p>
           </div>
         </div>
