--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <article>
           <p>
             Somos un pequeño grupo de profesionales que busca satisfacer la
-            necesidad de servicios de digitación a particulares o pymes.
+            necesidad de servicios de digitación a particulares o PYMES.
             Buscamos prestar un servicio de calidad al desarrollar procesos
             administrativos que puedan satisfacer las necesidades del cliente.
           </p>
@@ -81,7 +81,7 @@
             <i class="fas fa-users"></i>
             <h5>Administrative Outservices</h5>
             <p>
-              Trabajo administrativos teleoperados. Realización de tareas
+              Trabajos administrativos teleoperados. Realización de tareas
               rutinarios de ingreso de datos a plataformas internas del cliente
               respetando los protocolos e indicaciones dadas.
             </p>
