correccion de texto

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             Somos un pequeño grupo de profesionales que busca satisfacer la
             necesidad de servicios de digitación a particulares o PYMES.
             Buscamos prestar un servicio de calidad al desarrollar procesos
-            administrativos que puedan satisfacer las necesidades del cliente.
+            administrativos que puedan resolver los requerimientos de cada cliente.
           </p>
         </article>
       </section>
