agregado etiqueta meta

--- a/index.html
+++ b/index.html
@@ -2,6 +2,14 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="Servicios de digitación para particulares y PYMES, enfocado a la calidad y dar solucion a sus clientes"
+    />
+    <meta
+      name="keywords"
+      content="digitacion de documentos, servicios de digitacion, digitacion, data entry, servicios administrativos, administrative outservice, consolidacion de datos, digitación de datos, ingreso de datos, digitación de datos en santiago, digitación de datos en chile, ingreso de datos"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DigitacionesAR</title>
     <link rel="stylesheet" href="./index.css" />
@@ -26,7 +34,8 @@
             Somos un pequeño grupo de profesionales que busca satisfacer la
             necesidad de servicios de digitación a particulares o PYMES.
             Buscamos prestar un servicio de calidad al desarrollar procesos
-            administrativos que puedan resolver los requerimientos de cada cliente.
+            administrativos que puedan resolver los requerimientos de cada
+            cliente.
           </p>
         </article>
       </section>
